Add course allocation and fix null data response
